--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,29 +1,19 @@
-.container {
+.field {
   width: 80%;
   max-width: 1200px;
-  margin: 10px auto;
+  margin: 0 auto;
 }
 
-.block--list {
+.fl {
   display: flex;
-  flex-wrap: wrap;
-  gap: $gap;
-  list-style: none;
-  justify-content: center;
-
-  > li {
-    width: $block-width-default;
-
-    @media (max-width: 1366px) {
-      width: $block-width-xl;
-    }
-
-    @media (max-width: 992px) {
-      width: $block-width-md;
-    }
-
-    @media (max-width: 600px) {
-      width: $block-width-xl;
-    }
-  }
 }
+
+section.top-ind{
+  padding-top: 120px;
+}
+
+
+section.gr-bg{
+  background-color: ;
+}
+
