--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,12 +8,7 @@
   display: flex;
 }
 
-section.top-ind{
-  padding-top: 120px;
-}
-
-
-section.gr-bg{
-  background-color: ;
+.top-ind {
+  padding-top: $top-indent;
 }
 
