--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Кольори
 $font-color-light: #ffffff;
 $font-color-dark: #222222;
-$gr-bg-color: #eeeeee;
+$bg-gr-color: #eeeeee;
 
 // Шрифти
 $font-inter: 'Inter', Arial, Helvetica, sans-serif;
