--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,4 +7,6 @@ $bg-gr-color: #eeeeee;
 $font-inter: 'Inter', Arial, Helvetica, sans-serif;
 
 // Відступи
-$top-indent: 120px;
+$indent-lg: 120px;
+$indent-md: 70px;
+$indent-sm: 52px;
