--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,5 @@
 @import 'variables';
-@import 'card';
-@import 'section-heading';
+@import 'resets';
+@import 'layout';
+@import 'cards';
+@import 'ai-agents';
