--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,8 @@
 $font-color-light: #ffffff;
 $font-color-dark: #222222;
 $bg-gr-color: #eeeeee;
+$bg-bl-color: #146EF5;
+
 
 // Шрифти
 $font-inter: 'Inter', Arial, Helvetica, sans-serif;
