--- a/css/main.css
+++ b/css/main.css
@@ -22,16 +22,54 @@ body {
   display: flex;
 }
 
+.header {
+  background-color: #000000;
+}
 .header__container {
   justify-content: space-between;
+  align-items: center;
+  height: 80px;
+}
+.header__left, .header__list {
+  gap: 32px;
+  align-items: center;
+}
+.header__logo {
+  align-items: center;
+  font-size: 1.5rem;
+}
+.header__logo > img {
+  width: 1.5rem;
+}
+.header__link {
+  font-size: 16px;
 }
 .header__logo, .header__link {
   font-weight: 600;
-  font-style: Semi Bold;
-  font-size: 1rem;
   line-height: 150%;
-  letter-spacing: 0%;
+  letter-spacing: 0;
   color: #ffffff;
+}
+.header__list {
+  list-style: none;
+}
+.header__buttons {
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 600;
+  line-height: 150%;
+  letter-spacing: 0;
+  color: #ffffff;
+}
+
+.btn--blue {
+  padding: 12px 24px;
+  border-radius: 10px;
+  background-color: #146EF5;
 }
 
 .ai-agents {
