--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
-@import 'variables';
 @import 'resets';
+@import 'variables';
+@import 'mixins';
 @import 'layout';
 @import 'header';
+@import 'buttons';
 @import 'cards';
 @import 'ai-agents';
