--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'mixins';
 @import 'layout';
 @import 'header';
+@import 'banner';
 @import 'buttons';
 @import 'cards';
 @import 'ai-agents';
