--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -2,4 +2,30 @@
   background-image: url(../img/bannner-bg.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  padding-bottom: 57px;
+
+  &__container {
+    text-align: center;
+    margin-bottom: $indent-md;
+  }
+
+  &__title {
+    @include section-heading($font-color-light);
+    padding-top: $indent-lg;
+    padding-bottom: 24px;
+  }
+
+  &__subtitle {
+    @include text-description($font-color-light, $fs-text-lg);
+    margin-bottom: $indent-mds;
+  }
+  
+  &__logos {
+    @include text-description($font-color-light, $fs-text-regular);
+    align-items: center;
+  }
+
+  &__logos__images {
+    width: 80%;
+  }
 }
