--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -5,3 +5,24 @@
   letter-spacing: 0;
   color: $font-color-light;
 }
+
+
+@mixin section-heading($color) {
+  font-family: $font-inter;
+  font-weight: 700;
+  font-size: $fs-heading;
+  line-height: 1.2;
+  letter-spacing: 0;
+  text-align: center;
+  color: $color;
+}
+
+@mixin text-description($color, $font-size) {
+  font-family: $font-inter;
+  font-weight: 400;
+  font-size: $font-size;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: center;
+  color: $color;
+}
