--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,13 @@ $bg-bl-color: #146EF5;
 // Шрифти
 $font-inter: 'Inter', Arial, Helvetica, sans-serif;
 
+//Розміри шрифтів
+$fs-heading: 3.5rem;
+$fs-text-lg: 1.25rem;
+$fs-text-regular: 1rem;
+
 // Відступи
 $indent-lg: 120px;
-$indent-md: 70px;
+$indent-md: 100px;
+$indent-mds: 52px;
 $indent-sm: 52px;
