--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -1,2 +1,158 @@
 .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: $indent-sm;
+}
+
+.card {
+  position: relative;
+  flex: 1 1 30%;
+  aspect-ratio: 3/4;
+  overflow: hidden;
+  border-radius: 10px;
+  transition: transform 0.25s ease;
+  cursor: pointer;
+
+  &::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(to top, rgba(0, 0, 0, .65), transparent);
+    z-index: 1;
+    pointer-events: none;
+    transition: background 0.25s ease;
+  }
+
+  &:hover::before {
+    background: linear-gradient(to top, rgba(0, 0, 0, .85), transparent);
+  }
+
+  &:hover {
+    transform: translateY(-4px);
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: transform 0.4s ease;
+    position: relative;
+    z-index: 0;
+  }
+
+  &:hover &__image {
+    transform: scale(1.03);
+  }
+
+  &__content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: $indent-sm;
+    padding-right: 65px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    transform: translateY(0);
+    transition: transform 0.3s ease;
+    z-index: 2;
+  }
+
+  &__title {
+    @include side-description($font-color-light, 24px, left, 700);
+  }
+
+  &__description,
+  &__link-gs {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px);
+    transition: opacity 0.25s ease, transform 0.25s ease, visibility 0.25s;
+    height: 0;
+    @include side-description($font-color-light, 16px, left, 400);
+  }
+
+  &__description {
+    margin-bottom: 24px;
+  }
+
+  &__links__container {
+    align-items: center;
+    position: relative;
+  }
+
+  &__link-gs {
+    align-items: center;
+    line-height: 1;
+    text-decoration-line: underline;
+    text-decoration-color: #80786a;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 5px;
+
+
+    &::after {
+      content: " \203a";
+      font-size: 2.5em;
+      vertical-align: middle;
+      margin-left: 10px;
+      margin-bottom: 5px;
+      display: inline-block;
+      font-weight: 200;
+    }
+  }
+
+  &__title {
+    margin-bottom: -21px;
+  }
+
+  &:hover &__title {
+    margin-bottom: 8px;
+  }
+
+  &:hover &__description,
+  &:hover &__link-gs {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    height: auto;
+  }
+
+  &__desc-icon {
+    position: absolute;
+    right: 32px;
+    bottom: 40px;
+    width: 32px;
+    z-index: 10;
+  }
+
+  &__desc-icon.hover-icon {
+    opacity: 0;
+  }
+
+  &:hover &__desc-icon.hover-icon {
+    opacity: 1;
+  }
+}
+
+
+
+
+@media (max-width: 1200px) {
+  .card {
+    flex: 1 1 45%; 
+    aspect-ratio: 1/1.5;
+  }
+}
+
+@media (max-width: 768px) {
+  .cards {
+    flex-direction: column;
+  }
+
+  .card {
+    aspect-ratio: 1/1.5;
+  }
 }
