--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ body {
   font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
+.sc {
+  padding-top: 120px;
+}
+
 .field {
   width: 90%;
   max-width: 1312px;
@@ -77,7 +81,7 @@ body {
   letter-spacing: 0;
   text-align: center;
   color: #ffffff;
-  padding-top: 120px;
+  padding-top: 100px;
   padding-bottom: 24px;
 }
 .banner__subtitle {
