--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,5 +6,7 @@
 @import 'banner';
 @import 'buttons';
 @import 'cards';
-@import 'accelerate';
 @import 'ai-agents';
+@import 'accelerate';
+@import 'trusted';
+
