--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -15,6 +15,8 @@
   letter-spacing: 0;
   text-align: center;
   color: $color;
+  max-width: 936px;
+  margin: 0 auto;
 }
 
 @mixin text-description($color, $font-size) {
