--- a/css/main.css
+++ b/css/main.css
@@ -698,15 +698,21 @@ body {
   }
 }
 
-.future__container {
-  background-image: url(../img/realm/realm-bg.png);
-  background-size: 100% 100%;
-  border-radius: 12px;
-  justify-content: space-between;
+.future {
+  padding-bottom: 100px;
 }
-.future__content {
-  flex: 0.8;
-  margin: 120px 80px;
+.future__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 32px;
+}
+.future__header .future__text {
+  flex: 1;
+}
+.future__header .nav-buttons {
+  display: flex;
+  gap: 8px;
 }
 .future__title {
   font-family: "Inter", Arial, Helvetica, sans-serif;
@@ -727,4 +733,80 @@ body {
   text-align: left;
   color: #222222;
   margin-bottom: 52px;
+}
+.future__cards {
+  display: flex;
+  gap: 32px;
+  flex-wrap: wrap;
+}
+@media (max-width: 950px) {
+  .future__cards {
+    flex-direction: column;
+  }
+}
+.future__card {
+  flex: 1;
+  padding: 24px;
+  background-image: url(../img/future/card-bg.png);
+  border-radius: 12px;
+}
+.future__card__inner {
+  padding: 16px;
+  background-color: #ffffff;
+  border-radius: inherit;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.future__card__badge {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: center;
+  color: #146EF5;
+  text-align: left;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 2px 4px;
+  background-color: rgba(20, 110, 245, 0.1);
+  border-radius: 4px;
+  margin-bottom: 16px;
+}
+.future__card__title {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: left;
+  color: #222222;
+  margin-bottom: 32px;
+}
+.future__card__link {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: left;
+  color: #222222;
+  margin-top: auto;
+  text-decoration: underline;
+}
+.future__card__link::after {
+  content: " ›";
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: left;
+  color: #222222;
+  font-size: 1.5em;
+  vertical-align: middle;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  display: inline-block;
 }/*# sourceMappingURL=main.css.map */
