add transparent button

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -8,3 +8,9 @@
   border-radius: 10px;
   background-color: $bg-bl-color;
 }
+
+.btn--white {
+  padding: 12px 24px;
+  border-radius: 10px;
+  border: 1px solid $font-color-light;
+}
