add transparent button

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -9,7 +9,7 @@
   background-color: $bg-bl-color;
 }
 
-.btn--white {
+.btn--transparent {
   padding: 12px 24px;
   border-radius: 10px;
   border: 1px solid $font-color-light;
